--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "build": "npx tsc",
     "dev": "nodemon app.ts"
   },
   "repository": {
