--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
-    "@types/mysql": "^2.15.21",
     "@types/node": "^18.13.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
@@ -29,6 +28,6 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "mysql2": "^3.1.2"
   }
 }
