--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.13.0",
+    "@types/passport": "^1.0.12",
+    "@types/passport-local": "^1.0.35",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
@@ -32,7 +34,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mysql2": "^3.1.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.28.0"
   }
 }
