--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/devmikh/serval-net-server#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/express-mysql-session": "^2.1.3",
+    "@types/express-session": "^1.17.6",
     "@types/node": "^18.13.0",
     "@types/passport": "^1.0.12",
     "@types/passport-local": "^1.0.35",
@@ -30,10 +33,12 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
     "mysql2": "^3.1.2",
     "passport": "^0.6.0",
