--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "serval-net-server",
   "version": "0.1.0",
   "description": "",
-  "main": "app.ts",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "node app.ts",
+    "start": "node dist/app.js",
     "build": "npx tsc",
     "dev": "nodemon app.ts"
   },
