--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "lib": ["es2021"],
       "module": "commonjs",
       "target": "es2021",
-  
+      "outDir": "dist",
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
